src/test/deca/context/valid/OUnaryMinus.deca
// Description:
//    test Unary minus
//
// Resultats:
//    
// 
// Historique:
//    cree le 01/01/2022

{
   int a=5;
   float b=6;
   a=-a;
   b=-b;
}