src/test/deca/context/invalid/typage.deca
// Description:
//    test operation boolean incorrecte 
//
// Resultats:
//      Can not assign boolean to float
// 
// Historique:
//    cree le 01/01/2022

{
    float a;
    boolean b;
    b=a;
}